pom updated to work with openjdk + openjfx